add chat sample

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="message.length==0">I am listening....</div>
 <div *ngIf="message.length>0" >
   <li *ngFor="let item of message">
-    Message: {{item}}
+     {{item}}
   </li>
 </div>
 
