--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="message.length==0">I am listening....</div>
+<!-- <div *ngIf="message.length==0">I am listening....</div>
 <div *ngIf="message.length>0" >
   <li *ngFor="let item of message">
      {{item}}
   </li>
-</div>
+</div> -->
 
 <router-outlet></router-outlet>
